trash&garbage/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01_2238/manifests/base/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: davtro
spec:
  replicas: 1
  selector: { matchLabels: { app: pgadmin } }
  template:
    metadata: { labels: { app: pgadmin } }
    spec:
      securityContext:
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:8
          ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: davtro
spec:
  selector: { app: pgadmin }
  ports: [{ port: 80, targetPort: 80 }]
